Fix warnings in junction