@@ -21,9 +21,10 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
-import org.littletonrobotics.junction.LogTable;
 import org.littletonrobotics.junction.LogTable.LogValue;
 
 class RadioLogger {
@@ -58,8 +59,8 @@ class RadioLogger {
     statusURLBuilder.append(teamNumber % 100);
     statusURLBuilder.append(".1/status");
     try {
-      statusURL = new URL(statusURLBuilder.toString());
-    } catch (MalformedURLException e) {
+      statusURL = new URI(statusURLBuilder.toString()).toURL();
+    } catch (URISyntaxException | MalformedURLException e) {
       return;
     }
 
@@ -90,7 +91,6 @@ class RadioLogger {
           }
         });
     notifier.setName("AdvantageKit_RadioLogger");
-    notifier.setHALThreadPriority(false, 0);
     notifier.startPeriodic(requestPeriodSecs);
   }
 }
